--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 -->
 <html>
 <head>
-	<title>Linear by TEMPLATED</title>
+	<title>UoS resources by Tristan</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -30,19 +30,19 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 			<!-- Logo -->
 			<div id="logo">
-				<h1><a href="#">Linear</a></h1>
-				<span class="tag">By TEMPLATED</span>
+				<h1><a href="#"><font color = "#000000">Geos Learn</font></a></h1>
+				<span class="tag"><font color = "#000000">UoS resources</font></span>
 			</div>
 		</div>
 	</div>
 	<!-- Header -->
 	{{ content }}
-	
+
 	<!-- Tweet -->
 	<div id="tweet">
 		<div class="container">
 			<section>
-				<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+				<blockquote>&ldquo;All models are wrong but some are useful - George Box 1976.&rdquo;</blockquote>
 			</section>
 		</div>
 	</div>
@@ -54,13 +54,13 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		<section>
 			<header>
 				<h2>Get in touch</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+				<span class="byline">Tristan Salles - The University of Sydney</span>
 			</header>
 			<ul class="contact">
-				<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-				<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-				<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-				<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
+				<li><a href="http://twitter.com/salles_tristan" class="fa fa-twitter"><span>Twitter</span></a></li>
+				<li class="active"><a href="http://www.facebook.com/public/Tristan-Salles" class="fa fa-facebook"><span>Facebook</span></a></li>
+				<li><a href="http://github.com/tristan-salles" class="fa fa-dribbble"><span>Pinterest</span></a></li>
+				<li><a href="http://sydney.edu.au/science/people/tristan.salles.php" class="fa fa-tumblr"><span>Google+</span></a></li>
 			</ul>
 		</section>
 	</div>
