--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,24 +33,24 @@
 		font-weight: 300;
 		color: #777;
 	}
-	
+
 		h2
 		{
 			letter-spacing: -0.025em;
 		}
-	
+
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
 		{
 			color: inherit;
 			text-decoration: none;
 		}
-		
+
 	strong, b
 	{
 		font-weight: 500;
 		color: #000000;
 	}
-	
+
 	em, i
 	{
 		font-style: italic;
@@ -61,7 +61,7 @@
 		text-decoration: none;
 		color: #80BA8E;
 	}
-	
+
 	a:hover
 	{
 		text-decoration: underline;
@@ -73,14 +73,14 @@
 		top: 0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	sup
 	{
 		position: relative;
 		top: -0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	hr
 	{
 		border: 0;
@@ -88,14 +88,14 @@
 		margin: 6em 0 0 0;
 		padding: 6em 0 0 0;
 	}
-	
+
 	blockquote
 	{
 		border-left: solid 0.5em #ddd;
 		padding: 1em 0 1em 2em;
 		font-style: italic;
 	}
-	
+
 	p, ul, ol, dl, table
 	{
 		margin-bottom: 1em;
@@ -105,7 +105,7 @@
 	{
 		margin-bottom: 1.6em;
 	}
-	
+
 		header h2
 		{
 		}
@@ -116,7 +116,7 @@
 			margin: 1.5em 0 0 0;
 			padding: 0 0 0.5em 0;
 		}
-		
+
 	footer
 	{
 		margin-top: 1em;
@@ -133,13 +133,13 @@
 	}
 
 	/* Sections/Articles */
-	
+
 		section,
 		article
 		{
 			margin-bottom: 3em;
 		}
-		
+
 		section > :last-child,
 		article > :last-child
 		{
@@ -164,7 +164,7 @@
 		{
 			display: inline-block;
 		}
-		
+
 			.image img
 			{
 				display: block;
@@ -177,20 +177,20 @@
 				width: 100%;
 				margin: 0 0 2em 0;
 			}
-			
+
 			.image.full
 			{
 				display: block;
 				width: 100%;
 				margin-bottom: 2em;
 			}
-			
+
 			.image.left
 			{
 				float: left;
 				margin: 0 2em 2em 0;
 			}
-			
+
 			.image.centered
 			{
 				display: block;
@@ -211,46 +211,46 @@
 			padding: 0em 0em 1.5em 0em;
 			list-style: none;
 		}
-		
+
 			ul.default li
 			{
 				padding: 0.60em 0em;
 				font-size: 0.95em;
 				border-top: 1px solid;
 				border-color: rgba(0,0,0,.1);
-			}		
-		
+			}
+
 			ul.default li:first-child
 			{
 				padding-top: 0;
 				border-top: none;
 			}
-	
+
 			ul.default {
 			}
-		
+
 		ul.style li {
 			margin: 0;
 			padding: 2em 0em 1.5em 0em;
 			border-top: 1px solid;
 			border-color: rgba(0,0,0,.1);
 		}
-		
+
 		ul.style li:first-child
 		{
 			padding-top: 0;
 			border-top: none;
 		}
-		
+
 		ul.style img {
 			float: left;
 			margin-right: 20px;
 		}
-		
+
 		ul.style a {
 			color: #434343;
 		}
-		
+
 		ul.style .posted {
 			padding: 0em 0em 1em 0em;
 			letter-spacing: 1px;
@@ -258,15 +258,15 @@
 			font-size: 8pt;
 			color: #A2A2A2;
 		}
-		
+
 		ul.style .first {
 			padding-top: 0px;
 			border-top: none;
 		}
-							
+
 
 	/* Buttons */
-		
+
 	.button
 	{
 		position: relative;
@@ -306,7 +306,7 @@
 		.fa.solo
 		{
 		}
-		
+
 			.fa.solo span
 			{
 				display: none;
@@ -733,20 +733,20 @@
 		list-style: none;
 		cursor: default;
 	}
-	
+
 	ul.contact li
 	{
 		display: inline-block;
 		margin: 0 1em;
 	}
-	
+
 	ul.contact li span
 	{
 		display: none;
 		margin: 0;
 		padding: 0;
 	}
-	
+
 	ul.contact li a
 	{
 		color: inherit;
@@ -758,7 +758,7 @@
 		-ms-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
 		transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
 	}
-	
+
 	ul.contact li a:hover
 	{
 		color: #fff;
@@ -771,12 +771,12 @@
 	#header
 	{
 		position: relative;
-		background: url(../images/header.jpg) no-repeat bottom center;
+		background: url(../images/header2.jpg) no-repeat bottom center;
 		background-attachment: fixed;
 		background-size: cover;
 		text-align: center;
 	}
-	
+
 		#header:before
 		{
 			content: '';
@@ -797,12 +797,12 @@
 		position: relative;
 		z-index: 1;
 	}
-	
+
 		#logo h1
 		{
 			color: #FFF;
 		}
-	
+
 		#logo a
 		{
 			display: block;
@@ -814,7 +814,7 @@
 			letter-spacing: -0.05em;
 			margin: 0 0 0.125em 0;
 		}
-		
+
 		#logo span
 		{
 			font-size: 1.4em;
@@ -837,7 +837,7 @@
 			left: 0;
 			width: 100%;
 		}
-		
+
 		#nav > ul
 		{
 			margin: 0;
@@ -851,7 +851,7 @@
 			border-right: 1px solid;
 			border-color: rgba(255,255,255,.1);
 		}
-		
+
 			#nav > ul > li:last-child
 			{
 				padding-right: 0;
@@ -880,7 +880,7 @@
 			{
 				display: none;
 			}
-	
+
 /*********************************************************************************/
 /* Main                                                                          */
 /*********************************************************************************/
@@ -890,12 +890,12 @@
 		position: relative;
 		background: #fff;
 	}
-	
+
 	.homepage #content
 	{
 		text-align: center;
 	}
-	
+
 	.homepage #content header h2
 	{
 	}
@@ -909,18 +909,18 @@
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
-	
+
 	#footer
 	{
 		position: relative;
 		text-align: center;
 	}
-	
+
 	#footer header h2
 	{
 		color: #FFF !important;
 	}
-	
+
 	#footer header .byline
 	{
 		color: rgba(255,255,255,.2);
@@ -929,14 +929,14 @@
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
-	
+
 	#copyright
 	{
 		position: relative;
 		text-align: center;
 		color: #774535;
 	}
-	
+
 	#copyright .container
 	{
 		padding: 3em 0em;
@@ -944,24 +944,24 @@
 		border-color: rgba(255,255,255,.05);
 		color:  rgba(255,255,255,.1);
 	}
-	
+
 	#copyright a
 	{
 		text-decoration: none;
 		color:  rgba(255,255,255,.2);
 	}
-	
+
 /*********************************************************************************/
 /* Featured                                                                      */
 /*********************************************************************************/
-	
+
 	#featured
 	{
 		position: relative;
 		background: #f2f2f2;
 		text-align: center;
 	}
-	
+
 	#featured h3
 	{
 		display: block;
@@ -972,7 +972,7 @@
 	{
 		font-size: 4em;
 	}
-	
+
 	#featured .button
 	{
 		margin-top: 1.5em;
@@ -981,12 +981,12 @@
 /*********************************************************************************/
 /* Tweet                                                                         */
 /*********************************************************************************/
-	
+
 	#tweet
 	{
 		position: relative;
 		text-align: center;
-		background: url(../images/header.jpg) no-repeat center center;
+		background: url(../images/header2.jpg) no-repeat center center;
 		background-attachment: fixed;
 		background-size: cover;
 	}
@@ -1001,7 +1001,7 @@
 			height: 100%;
 			background: rgba(64,64,64,0.5);
 		}
-	
+
 		#tweet section
 		{
 			border-top: 1px solid;
@@ -1016,4 +1016,4 @@
 			margin: 0;
 			font-weight: 300;
 			color: rgba(255,255,255,.6);
-		}	
+		}
