--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/assets/js/skel.min.js"></script>
@@ -42,7 +43,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	<div id="tweet">
 		<div class="container">
 			<section>
-				<blockquote>&ldquo;All models are wrong but some are useful - George Box 1976.&rdquo;</blockquote>
+				<blockquote><font color = "#000000"><strong>All models are wrong but some are useful (G. Box 1976)</strong></font></blockquote>
 			</section>
 		</div>
 	</div>
@@ -57,10 +58,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<span class="byline">Tristan Salles - The University of Sydney</span>
 			</header>
 			<ul class="contact">
-				<li><a href="http://twitter.com/salles_tristan" class="fa fa-twitter"><span>Twitter</span></a></li>
-				<li class="active"><a href="http://www.facebook.com/public/Tristan-Salles" class="fa fa-facebook"><span>Facebook</span></a></li>
-				<li><a href="http://github.com/tristan-salles" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-				<li><a href="http://sydney.edu.au/science/people/tristan.salles.php" class="fa fa-tumblr"><span>Google+</span></a></li>
+				<li><a href="http://sydney.edu.au/science/people/tristan.salles.php" target="_blank" class="fa fa-user"><span>Profile</span></a></li>
+				<li><a href="http://github.com/tristan-salles" target="_blank" class="fa fa-github-alt"><span>Github</span></a></li>
+				<li><a href="http://twitter.com/salles_tristan" target="_blank" class="fa fa-twitter"><span>Twitter</span></a></li>
+				<li><a href="http://au.linkedin.com/in/sallestristan" target="_blank" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
+				<li class="active"><a href="http://www.facebook.com/public/Tristan-Salles" target="_blank" class="fa fa-facebook"><span>Facebook</span></a></li>
 			</ul>
 		</section>
 	</div>
