--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,16 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 -->
 <html>
 <head>
-	<title>UoS resources by Tristan</title>
+	<title>UoS resources by Tristan Salles</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/assets/js/skel.min.js"></script>
 	<script src="/assets/js/skel-panels.min.js"></script>
 	<script src="/assets/js/init.js"></script>
+	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
 	<noscript>
 		<link rel="stylesheet" href="/assets/css/skel-noscript.css" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
@@ -32,7 +32,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<!-- Logo -->
 			<div id="logo">
 				<h1><a href="#"><font color = "#000000">Geos Learn</font></a></h1>
-				<span class="tag"><font color = "#000000">UoS resources</font></span>
+				<span class="tag"><font color = "#000000">Teaching resources from Tristan Salles</font></span>
 			</div>
 		</div>
 	</div>
