--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 -->
 <html>
 <head>
-	<title>UoS resources by Tristan Salles</title>
+	<title>GeosLearn</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
