--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,12 +3,12 @@
 <div id="sidebar" class="4u">
 	<section>
 		<header>
-			<h2>Etiam malesuada</h2>
+			<h2>Modules</h2>
 		</header>
 		<div class="row">
 			<section class="6u">
 				<ul class="default">
-					<li><a href="#">Donec facilisis tempor</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/10/OceanData-post.html">Ocean Data</a></li>
 					<li><a href="#">Nulla convallis cursus</a></li>
 					<li><a href="#">Integer congue euismod</a></li>
 					<li><a href="#">Venenatis vulputate</a></li>
@@ -26,9 +26,10 @@
 			</section>
 		</div>
 	</section>
-	<section>
+
+	<!--section>
 		<header>
-			<h2>Recent Blog Posts</h2>
+			<h2>Recent modules</h2>
 		</header>
 		<ul class="style">
 		{% for post in site.posts offset: 0 limit: 2 %}
@@ -38,6 +39,5 @@
 			</li>
 		{% endfor %}
 		</ul>
-	</section>
+	</section-->
 </div>
-
