--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,8 @@
 		<ul>
 			{% assign current = page.url | downcase | split: '/' %}
 			<li {% if current[1] == 'index.html' %}class='current'{% endif %}><a href="/index.html">Homepage</a></li>
-			<li {% if current[1] == 'JupyterIntro.html' %}class='current'{% endif %}><a href="/JupyterIntro.html">Jupyter Intro</a></li>
 			<li {% if current[1] == 'blog' %}class='current'{% endif %}><a href="/blog">Modules</a></li>
+			<li {% if current[1] == 'LabDeploy.html' %}class='current'{% endif %}><a href="/LabDeploy.html">Deploy</a></li>
 			<!--li {% if current[1] == 'left-sidebar.html' %}class='current'{% endif %}><a href="/left-sidebar.html">Left Sidebar</a></li>
 			<li {% if current[1] == 'right-sidebar.html' %}class='current'{% endif %}><a href="/right-sidebar.html">Right Sidebar</a></li-->
 		</ul>
