--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,36 +8,32 @@
 		<div class="row">
 			<section class="6u">
 				<ul class="default">
-					<li><a href="{{ site.prefix }}/2016/10/10/OceanData-post.html">Ocean Data</a></li>
-					<li><a href="#">Nulla convallis cursus</a></li>
-					<li><a href="#">Integer congue euismod</a></li>
-					<li><a href="#">Venenatis vulputate</a></li>
-					<li><a href="#">Morbi ligula volutpat</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/10/OceanData-post.html">Ocean data</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/08/CoastEvol-post.html">Coastal evolution</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/02/Delta-post.html">Deltaic systems</a></li>
 				</ul>
 			</section>
 			<section class="6u">
 				<ul class="default">
-					<li><a href="#">Donec facilisis tempor</a></li>
-					<li><a href="#">Nulla convallis cursus</a></li>
-					<li><a href="#">Integer congue euismod</a></li>
-					<li><a href="#">Venenatis vulputate</a></li>
-					<li><a href="#">Morbi ligula volutpat</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/09/MapGeo-post.html">Mapping resources</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/07/Basin-post.html">Basin formation</a></li>
+					<li><a href="{{ site.prefix }}/2016/10/01/TecGeo-post.html">Tectonic geomorphology</a></li>
 				</ul>
 			</section>
 		</div>
 	</section>
 
-	<!--section>
+	<section>
 		<header>
 			<h2>Recent modules</h2>
 		</header>
 		<ul class="style">
 		{% for post in site.posts offset: 0 limit: 2 %}
 			<li>
-				<p class="posted">{{ post.date | date_to_string }}  |  (10 )  Comments</p>
+				<!--p class="posted">{{ post.date | date_to_string }}  |  (10 )  Comments</p-->
 				<p><a href="{{ site.prefix }}{{ post.url }}">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</a></p>
 			</li>
 		{% endfor %}
 		</ul>
-	</section-->
+	</section>
 </div>
