--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 <head>
 	<title>GeosLearn</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="" />
+	<meta name="description" content="" /> 
 	<meta name="keywords" content="" />
+	<link rel="shortcut icon" href="/assets/images/favicon.ico?">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/assets/js/skel.min.js"></script>
